# vibe-bridge

./: .gitignore  .kissconfig  AGENTS.md  CLAUDE_CODE_BRIDGE_PLAN.md  Cargo.toml  README.md  app-server-manager-hooks-CESABIyE.js  backend-rewrite-plan.md  codex-mobile-companion-discovery.md  distribution-followup-plan.md  graph-0.5.md  graph-1.0.md  graph.md  main-8X_hBwW2.js  tmp-thread-api-refactor.md  trust-registry.json  use-navigate-to-local-conversation-Dho-1-Cv.js  worker.js
.factory/: init.sh  services.yaml
crates/bridge-core/: Cargo.toml  gemini.md  opus.md  sonnet.md  validated-feedback.md
crates/bridge-core/src/: codex_ipc.rs  codex_runtime.rs  codex_transport.rs  incremental_text.rs  legacy.rs  lib.rs  logging.rs  main.rs  pairing.rs  persistence.rs  policy.rs  runtime_sync.rs  secure_storage.rs  stream_router.rs  test_support.rs  thread_api.rs  thread_identity.rs
crates/bridge-core/src/rewrite/: api.rs  config.rs  events.rs  gateway.rs  mod.rs  pairing_route.rs  projection.rs  state.rs
crates/bridge-core/src/server/: api.rs  codex_usage.rs  config.rs  contracts.rs  controls.rs  events.rs  gateway.rs  mod.rs  pairing_route.rs  projection.rs  speech.rs  state.rs  timeline_dedupe.rs  timeline_events.rs
crates/bridge-core/src/server/gateway/: claude.rs  codex.rs  legacy_archive.rs  mapping.rs  mod.rs  models.rs  tests.rs
crates/bridge-core/src/server/projection/: item_state.rs
crates/bridge-core/src/server/state/: approvals.rs  desktop_ipc.rs  git_diff.rs  lifecycle.rs  live.rs  reducer.rs  snapshots.rs  streams.rs  tests.rs  thread_runtime.rs  titles.rs  turns.rs  user_input.rs  workflow.rs
crates/bridge-core/src/thread_api/: archive.rs  notifications.rs  patch_diff.rs  rpc.rs  service.rs  sync.rs  tests.rs  timeline.rs
crates/bridge-core/src/thread_api/tests/: archive.rs  mod.rs  notifications.rs  rpc_timeline.rs  service.rs  sync.rs
(+440 files in other folders)
