[package]
name = "bridge-core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bridge-server"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared-contracts = { path = "../shared-contracts" }
tungstenite = "0.24"
