[package]
name = "bridge-core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bridge-server"
path = "src/bin/bridge_server.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["http1", "json", "multipart", "ws"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared-contracts = { path = "../shared-contracts" }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
tungstenite = "0.24"
